Header Created And Inserted In The NavBar

--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,8 @@
 </head>
 <body>
     <header>
-        <div id="content">
-            <h1>Ramen Shop</h1>
-            <p>Your No 1 Stop For Any Kind of Ramen</p>
-        </div>
-        <nav>
-            <buttons></buttons>
-            <buttons></buttons>
-            <buttons></buttons>
-            <buttons></buttons>
-        </nav>
+        <nav></nav>
     </header>
+    <div id="content"></div>
 </body>
 </html>
